<resources>
    <string name="app_name">SwSh Over World RNG Tool</string>
    <string name="tab_text_1">Search</string>
    <string name="tab_text_2">Result</string>
    <string name="state">0000000000000001</string>
    <string name="state0Label">State0:</string>
    <string name="state1Label">State1:</string>
    <string name="motionCount">0</string>
    <string name="motionCountLabel">count:</string>
    <string name="resultView">Result</string>
    <string name="toast_message">Search success!</string>
    <string name="toast_errormessage">input error!</string>
    <string name="stateSearchButton">State</string>
    <string name="advancesLabel">Advances:</string>
    <string name="advMin">0</string>
    <string name="advMax">10000</string>
    <string name="tsvLabel">TID:</string>
    <string name="tsv">19744</string>
    <string name="trv">0</string>
    <string name="shinyCharm">Shiny Charm</string>
    <string name="markCharm">Mark Charm</string>
    <string name="markLabel">Mark:</string>
    <string name="Ignore">Ignore</string>
    <string name="ShinyLabel">Shiny:</string>
    <string name="natureLabel">Nature:</string>
    <string name="cuteCharm">Cute Charm</string>
    <string name="weather">Weather</string>
    <string name="randomItem">Random held item</string>
    <string name="fishing">Fishing</string>
    <string name="isAbilityLocked">Ability Locked</string>
    <string name="staticCheck">Static</string>
    <string name="TSVSearch">TSV Search</string>
    <string name="hp">HP:</string>
    <string name="IVsMin">0</string>
    <string name="IVsMax">31</string>
    <string name="hyphen">-</string>
    <string name="atk">Atk:</string>
    <string name="def">Def:</string>
    <string name="spa">SpA:</string>
    <string name="slot">Slot:</string>
    <string name="slotMax">99</string>
    <string name="level">Level:</string>
    <string name="LvMin">0</string>
    <string name="LvMax">0</string>
    <string name="kosLabel">KOs:</string>
    <string name="KOs">0</string>
    <string name="searchButton">Search</string>
    <string name="stateSearchLabel">state search 0:Physical, 1:Special</string>
    <string name="motion">motion</string>
    <string name="OKButton">OK</string>
    <string name="frameResult">[F]: 0, resultCount: 0</string>
    <string name="stateSearchMax">1000</string>
    <string name="search_range">Search range</string>
    <string name="stateSearchMin">0</string>
    <string name="denStateSearch">Advances search</string>
    <string name="trvLabel">TRV:</string>
    <string name="spd">SpD:</string>
    <string name="legendary">Legendary</string>
    <string name="spe">Spe:</string>
    <string name="swsh_owrng">SwSh OWRNG</string>
    <string name="settingAboutLabel">About</string>
    <string name="settingAbout">https://github.com/IPA989/SwShOverWorldRNGTool</string>
    <string name="LicensesLabel">Licenses</string>
    <string name="Licenses">GNU General Public License v3.0\nhttps://github.com/IPA989/SwShOverWorldRNGTool/blob/main/LICENSE\n MIT License\nhttps://github.com/IPA989/SwShOverWorldRNGTool/blob/main/Licenses/MITLICENSE</string>
    <string name="none">None</string>
    <string name="any_mark">Any Mark</string>
    <string name="any_personality">Any Personality</string>
    <string name="rare">Rare</string>
    <string name="searching">searching...</string>
    <string name="searchEnd">search End!</string>
    <string name="inputError">input Error!</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacyPolicyText">https://github.com/IPA989/SwShOverWorldRNGTool/blob/main/PrivacyPolicy</string>
</resources>