<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settingAboutLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingAboutLabel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/settingAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:minHeight="48dp"
        android:text="@string/settingAbout" />

    <TextView
        android:id="@+id/LicensesLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LicensesLabel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Licenses"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
android:text="@string/Licenses" />

</LinearLayout>