<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".State_Search">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">



    <TextView
        android:id="@+id/stateSearchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/stateSearchLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/motionSpace0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Atk=0, Spa=1"
                android:ems="128"
                android:hint="@string/motion"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/motioncountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motionCountLabel" />

                <TextView
                    android:id="@+id/motioncount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/motionCount" />
            </LinearLayout>

            <TextView
                android:id="@+id/state0_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state0Label" />

            <TextView
                android:id="@+id/s0_search0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/state"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/state1_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state1Label" />

            <TextView
                android:id="@+id/s1_search0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/state"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchButton0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onclickSearch0"
                    android:text="@string/searchButton" />

                <Button
                    android:id="@+id/stateOKButton0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:onClick="onclickOK0"
                    android:text="@string/OKButton" />
            </LinearLayout>

            <TextView
                android:id="@+id/denStateSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/denStateSearch" />

            <EditText
                android:id="@+id/motionSpace1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Atk=0, Spa=1"
                android:ems="10"
                android:hint="@string/motion"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="" />

            <TextView
                android:id="@+id/searchRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_range" />

            <EditText
                android:id="@+id/stateSearchMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/stateSearchMin"
                android:autofillHints="" />

            <EditText
                android:id="@+id/stateSearchMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/stateSearchMax"
                android:autofillHints="" />

            <TextView
                android:id="@+id/state0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state0Label" />

            <TextView
                android:id="@+id/s0_search1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/state"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/state1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state1Label" />

            <TextView
                android:id="@+id/s1_search1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:text="@string/state"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/frameResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frameResult" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:onClick="onclickSearch1"
                    android:text="@string/searchButton" />

                <Button
                    android:id="@+id/stateOKButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onclickOK1"
                    android:text="@string/OKButton" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>

